Directories and Login
The directories are set-up properly and the login page can handle a GET call.

--- a/HTDOCS/MATTER/CONTENT/dashboard.html
+++ b/HTDOCS/MATTER/CONTENT/dashboard.html
@@ -2,6 +2,8 @@
 
 <style>
 
+/*  THIS HTML FILE WILL BE TURNED INTO A TXT FILE. MANY IN FACT. */
+
 @import 'https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300';
 
 /*
