--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -5,7 +5,7 @@
 @import 'https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300';
 
 html,body {
-  background-image: url("../HTDOCS/ASSETS/background_photos/mcgill_bckgrnd_1.jpeg");
+  background-image: url("assets/background_photos/mcgill_bckgrnd_1.jpeg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
@@ -265,7 +265,7 @@ a {
     </form>
 --->
 
-<form id="form" action="login-result.php" method="GET" class="login">
+<form id="form" action="src/back-end/login.php" method="GET" class="login">
   <input type="text" placeholder="Username" name="username">
   <input type="password" placeholder="Password" name="pass">
   <button type="submit">Login</button>
