--- a/HTDOCS/SRC/Front-end/login.html
+++ b/HTDOCS/SRC/Front-end/login.html
@@ -262,9 +262,11 @@ a {
 	&nbsp &nbsp TA Management
 
   </div>
-<!-- End of header --->
 
-  <div class="container" style="height:50px ;background: rgba(0, 0, 0, 0);"> </div>
+<div class="container" style="height:50px ;background: rgba(0, 0, 0, 0);"> <h2 style="color:red;background: rgba(255,255,255,0.75);">  <h2> </div>
+<!-- Error: This is an invalid account. Please try again. --->
+
+<!-- End of header --->
 
   <div class="container" style="height:335px;">
 
@@ -286,6 +288,9 @@ a {
   </div>
 
 </div>
+
+<script>
+</script>
 
 </body>
 
