Login, register, and logout implemented

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -265,7 +265,7 @@ a {
     </form>
 --->
 
-<form id="form" action="src/back-end/login.php" method="GET" class="login">
+<form id="form" action="src/back-end/login.php" method="POST" class="login">
   <input type="text" placeholder="Username" name="username">
   <input type="password" placeholder="Password" name="pass">
   <button type="submit">Login</button>
