--- a/htdocs/src/front-end/login.html
+++ b/htdocs/src/front-end/login.html
@@ -5,7 +5,7 @@
 @import 'https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300';
 
 html,body {
-  background-image: url("../../assets/background_photos/mcgill_bckgrnd_1.jpeg");
+  background-image: url("assets/background_photos/mcgill_bckgrnd_1.jpeg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
@@ -258,13 +258,15 @@ a {
   <div class="container" style="height:150px;background: rgba(255, 255, 255, 0);"> 
 
 	<text style="margin-left:-30px;"> McGill Department of &nbsp &nbsp <br> Computer Science &nbsp &nbsp </text>
-	<img src="../../assets/comp_sci_logo.png" style="height:75px;width:75px;border-radius:50%;" > </img>
+	<img src="assets/comp_sci_logo.png" style="height:75px;width:75px;border-radius:50%;" > </img>
 	&nbsp &nbsp TA Management
 
   </div>
-<!-- End of header --->
 
-  <div class="container" style="height:50px ;background: rgba(0, 0, 0, 0);"> </div>
+<div class="container" style="height:50px ;background: rgba(0, 0, 0, 0);"> <h2 style="color:red;background: rgba(255,255,255,0.75);">  <h2> </div>
+<!-- Error: This is an invalid account. Please try again. --->
+
+<!-- End of header --->
 
   <div class="container" style="height:335px;">
 
@@ -273,8 +275,6 @@ a {
   <input type="password" placeholder="Password" name="pass">
   <button type="submit">Login</button>
 </form>
-
-<div> Error: This is an invalid account. </div>
 
   </div>
 
@@ -290,9 +290,6 @@ a {
 </div>
 
 <script>
-
-function checkForSuccess
-
 </script>
 
 </body>
