--- a/htdocs/src/front-end/login.html
+++ b/htdocs/src/front-end/login.html
@@ -272,7 +272,7 @@ a {
 
   <div class="container" style="height:335px;">
 
-<form id="form" action="login.php" method="POST" class="login">
+<form id="form" action="src/back-end/login.php" method="POST" class="login">
   <input type="text" placeholder="Username" name="username">
   <input type="password" placeholder="Password" name="pass">
   <button type="submit">Login</button>
