--- a/htdocs/src/front-end/login.html
+++ b/htdocs/src/front-end/login.html
@@ -1,3 +1,4 @@
+<?php $errcode=(isset($_SESSION['errCode']))?$_SESSION['errCode']:''); ?>
 <html>
 
 <style>
@@ -257,7 +258,7 @@ a {
 <img src onerror="getErrorCode()">
 
 <!-- Header --->
-  <div class="container" style="height:150px;background: rgba(255, 255, 255, 0);"> 
+  <div class="container" style="height:100px;background: rgba(255, 255, 255, 0);"> 
 
 	<text style="margin-left:-30px;"> McGill Department of &nbsp &nbsp <br> Computer Science &nbsp &nbsp </text>
 	<img src="assets/comp_sci_logo.png" style="height:75px;width:75px;border-radius:50%;" > </img>
@@ -265,10 +266,10 @@ a {
 
   </div>
 
+<!-- End of header --->
+
 <div class="container" style="height:50px ;background: rgba(0, 0, 0, 0);"> <h2 id="error" style="color:red;background: rgba(255,255,255,0.75);">  <h2> </div>
 <!-- Error: This is an invalid account. Please try again. --->
-
-<!-- End of header --->
 
   <div class="container" style="height:335px;">
 
@@ -294,8 +295,8 @@ a {
 <script type="text/javascript">
   function getErrorCode()
   {
-	var errcode = '<%=Session["errCode"]%>'
-	document.getElementById('error').innerHTML = errcode;
+	var Error_Code = '<?php echo $errcode;?>';
+	document.getElementById('error').innerHTML = Error_Code;
   }
 </script>
 
