--- a/htdocs/src/front-end/dashboard_all_options.html
+++ b/htdocs/src/front-end/dashboard_all_options.html
@@ -171,7 +171,7 @@ div[class*=container] {
   </div>
 
 <!-- TA Management --->
-  <div class="container" style="height:150px;">  
+  <div class="container" style="height:150px;background: rgba(90, 20, 20, 0.6)">  
 
 <div onclick="openPage('TA_manage.html')" class="btn btn-four" style="background: rgba(175, 0, 0, 0.9);">
 <span> TA Management </span>
@@ -180,7 +180,7 @@ div[class*=container] {
   </div>
 
 <!-- System Operator --->
-  <div class="container" style="height:150px;">  
+  <div class="container" style="height:150px;background: rgba(80, 80, 20, 0.7)">  
 
 <div onclick="openPage('sys_op.html')" class="btn btn-four" style="background: rgba(175, 0, 0, 0.9);">
 <span> System Operations </span>
