Login/Register working

--- a/htdocs/src/front-end/register.html
+++ b/htdocs/src/front-end/register.html
@@ -307,7 +307,7 @@ input:valid {
 	  "<input name='password' type='hidden' value='"+ passwordVar + "'>" +
 	  "<input id='firstNameID' type='text' required pattern='[a-zA-Z]+' maxlength='64' minlength='1' name='first_name' value='First Name'>" +
 	  "<input id='lastNameID' type='text' required pattern='[a-zA-Z0-9]+' maxlength='64' minlength='1' name='last_name' value='Last Name'>" +
-	  "<input id='studentID' type='text' required pattern='[0-9]+' maxlength='9' minlength='9' name='uder_id' value='Student ID'>" +
+	  "<input id='studentID' type='text' required pattern='[0-9]+' maxlength='9' minlength='9' name='user_id' value='Student ID'>" +
 	  "<input id='emailID' type='text' required pattern='^[-!#$%&/'*+/0-9=?A-Z^_a-z{|}~](\.?[-!#$%&/'*+/0-9=?A-Z^_a-z{|}~])*@[a-zA-Z](-?[a-zA-Z0-9])*(\.[a-zA-Z](-?[a-zA-Z0-9])*)+$' maxlength='30' minlength='2' name='email' value='Email'>"  +
 	  "<button>Register</button>" +
 	"</form>";
