more ta_manage stuff

--- a/htdocs/src/front-end/TA_manage_choose_class.html
+++ b/htdocs/src/front-end/TA_manage_choose_class.html
@@ -250,11 +250,14 @@ a {
 
 </style>
 
-<body>
+<body onload='populateForm()'>
 
 <div class="col">
 
+<!--
 <img src onerror="populateForm()">
+--->
+
 
 <!-- Header --->
 
