--- a/htdocs/src/front-end/sys_op.html
+++ b/htdocs/src/front-end/sys_op.html
@@ -141,11 +141,34 @@ div[class*=container] {
 
   </div>
 
+
 <!-- System Operator --->
   <div class="container" style="height:150px;background: rgba(80, 80, 20, 0.7)">  
 
-<div onclick="openPage('sys_op.html')" class="btn btn-four" style="background: rgba(175, 0, 0, 0.9);">
-<span> System Operations </span>
+<div onclick="openPage('')" class="btn btn-four" style="background: rgba(175, 0, 0, 0.9);">
+<span> Add Courses Through a CSV File </span>
 </div>
  
   </div>
+
+  <div class="container" style="height:150px;background: rgba(80, 80, 20, 0.7)">  
+
+<div onclick="openPage('')" class="btn btn-four" style="background: rgba(175, 0, 0, 0.9);">
+<span> Add Courses Manually </span>
+</div>
+ 
+  </div>
+
+  <div class="container" style="height:150px;background: rgba(80, 80, 20, 0.7)">  
+
+<div onclick="openPage('')" class="btn btn-four" style="background: rgba(175, 0, 0, 0.9);">
+<span> Edit/Delete Courses </span>
+</div>
+ 
+  </div>
+
+</div>
+
+</body>
+
+</html>
