Logout Buttons Added

--- a/htdocs/src/front-end/TA_admin.html
+++ b/htdocs/src/front-end/TA_admin.html
@@ -141,13 +141,20 @@ div[class*=container] {
 
   </div>
 
+<!-- Logout --->
+  <div class="container" style="height:100px ;background: rgba(0, 0, 0, 0);"> 
 
+<div onclick="openPage('../back-end/logout.php')" class="btn btn-four" style="background: rgba(175, 0, 0, 0.9);">
+<span> Log Out </span>
+</div>
+
+  </div>
 
 <!-- TA Administration --->
   <div class="container" style="height:150px;background: rgba(0, 80, 80, 0.6)">  
 
 <div onclick="openPage('TA_admin.html')" class="btn btn-four" style="background: rgba(175, 0, 0, 0.9);">
-<span> TA Administration </span>
+<span> Import TA Cohort </span>
 </div>
  
   </div>
@@ -155,7 +162,7 @@ div[class*=container] {
   <div class="container" style="height:150px;background: rgba(0, 80, 80, 0.6)">  
 
 <div onclick="openPage('TA_admin.html')" class="btn btn-four" style="background: rgba(175, 0, 0, 0.9);">
-<span> TA Administration </span>
+<span> TA Info/History </span>
 </div>
  
   </div>
@@ -163,7 +170,7 @@ div[class*=container] {
   <div class="container" style="height:150px;background: rgba(0, 80, 80, 0.6)">  
 
 <div onclick="openPage('TA_admin.html')" class="btn btn-four" style="background: rgba(175, 0, 0, 0.9);">
-<span> TA Administration </span>
+<span> Course TA History </span>
 </div>
  
   </div>
@@ -171,7 +178,7 @@ div[class*=container] {
   <div class="container" style="height:150px;background: rgba(0, 80, 80, 0.6)">  
 
 <div onclick="openPage('TA_admin.html')" class="btn btn-four" style="background: rgba(175, 0, 0, 0.9);">
-<span> TA Administration </span>
+<span> Add TA to Course </span>
 </div>
  
   </div>
@@ -179,7 +186,7 @@ div[class*=container] {
   <div class="container" style="height:150px;background: rgba(0, 80, 80, 0.6)">  
 
 <div onclick="openPage('TA_admin.html')" class="btn btn-four" style="background: rgba(175, 0, 0, 0.9);">
-<span> TA Administration </span>
+<span> Remove TA From Course </span>
 </div>
  
   </div>
