--- a/htdocs/src/front-end/TA_rate.html
+++ b/htdocs/src/front-end/TA_rate.html
@@ -263,8 +263,14 @@ a {
 
 <!-- End of header --->
 
-<!-- Spacer --->
-<div class="container" style="height:50px ;background: rgba(0, 0, 0, 0);"> </div>
+<!-- Logout --->
+  <div class="container" style="height:100px ;background: rgba(0, 0, 0, 0);"> 
+
+<div onclick="openPage('../back-end/logout.php')" class="btn btn-four" style="background: rgba(175, 0, 0, 0.9);">
+<span> Log Out </span>
+</div>
+
+  </div>
 
 <!-- Rate the TA! --->
   <div id="form" class="container" style="height:450px;background: rgba(0, 100, 20, 0.6);">  
