--- a/htdocs/src/front-end/sys_op.html
+++ b/htdocs/src/front-end/sys_op.html
@@ -141,6 +141,15 @@ div[class*=container] {
 
   </div>
 
+<!-- Logout --->
+  <div class="container" style="height:100px ;background: rgba(0, 0, 0, 0);"> 
+
+<div onclick="openPage('../back-end/logout.php')" class="btn btn-four" style="background: rgba(175, 0, 0, 0.9);">
+<span> Log Out </span>
+</div>
+
+  </div>
+
 
 <!-- System Operator --->
   <div class="container" style="height:150px;background: rgba(80, 80, 20, 0.7)">  
