--- a/htdocs/src/front-end/TA_rate.html
+++ b/htdocs/src/front-end/TA_rate.html
@@ -248,7 +248,7 @@ a {
 
 </style>
 
-<body onload='populateForm()'>
+<body>
 
 <div class="col">
 
@@ -273,7 +273,7 @@ a {
   </div>
 
 <!-- Rate the TA! --->
-  <div id="form" class="container" style="height:450px;background: rgba(0, 100, 20, 0.6);">  
+  <div id="form" class="container" style="height:300px;background: rgba(0, 100, 20, 0.6);">  
 
 <div class="login">
 	<select name="course" id="course-select">
@@ -284,27 +284,36 @@ a {
 
   </div>
 
+<div id="tempID"> <h1> Hello there </h1></div>
+
+</div>
 
 <script>
+
+document.getElementById("tempID").innerHTML = "<p>nope</p>";
+
+
+
+function sayHello()
+{
+	
+}
 
 function populateForm()
 {
 
-	var formString = "<div onclick='startRate()' class='login'>
-				<select name='ta' id='ta-select'>" + "<option value=''> --Please choose an option--</option>";
+	var formString =
+		"<div onclick='startRate()' class='login'>
+		<select name='ta' id='ta-select'>" + "<option value=''> --Please choose an option--</option>";
 
 	formString += <?php
-
-		require_once '../back-end/utilities.php';
+			
+		$toReturn =
+			require_once '../back-end/utilities.php';
 		session_start();
 
 		$toReturn = "";
 
-		//$ta_courses = [];
-		//$prof_courses = [];
-		//if ($_SESSION["ta"]=="true") $ta_courses = Utilities::getCoursesByRole("$_SESSION['username']","ta");
-		//if ($_SESSION["instructor"]=="true") $prof_courses = Utilities::getCoursesByRole("$_SESSION['username']","instructor");
-	
 		$ta_array = Utilities::getTAByStudent($_SESSION["username"]);
 
 		foreach ($ta_array as $ta)
@@ -318,7 +327,7 @@ function populateForm()
 	formString += "</select> <br>
 			<button type='submit'>Select</button>
 		</div>";
-	document.getElementById("dropdown_form").innerHTML = formString;
+	document.getElementById("form").innerHTML = formString;
 
 }
 
