--- a/htdocs/src/front-end/TA_rate.html
+++ b/htdocs/src/front-end/TA_rate.html
@@ -248,7 +248,7 @@ a {
 
 </style>
 
-<body>
+<body onload='populateForm()'>
 
 <div class="col">
 
@@ -266,14 +266,13 @@ a {
 <!-- Logout --->
   <div class="container" style="height:100px ;background: rgba(0, 0, 0, 0);"> 
 
-<div onclick="openPage('../back-end/logout.php')" class="btn btn-four" style="background: rgba(175, 0, 0, 0.9);">
+ <div onclick="openPage('../back-end/logout.php')" class="btn btn-four" style="background: rgba(175, 0, 0, 0.9);">
 <span> Log Out </span>
-</div>
-
   </div>
 
+  </div>
 <!-- Rate the TA! --->
-  <div id="form" class="container" style="height:300px;background: rgba(0, 100, 20, 0.6);">  
+  <div id="form" class="container" style="height:450px;background: rgba(0, 100, 20, 0.6);">  
 
 <div class="login">
 	<select name="course" id="course-select">
@@ -284,76 +283,34 @@ a {
 
   </div>
 
-<div id="tempID"> <h1> Hello there </h1></div>
 
 </div>
 
 <script>
 
-document.getElementById("tempID").innerHTML = "<p>nope</p>";
-
-
-
-function sayHello()
-{
-	
-}
-
 function populateForm()
 {
 
-	var formString =
-		"<div onclick='startRate()' class='login'>
-		<select name='ta' id='ta-select'>" + "<option value=''> --Please choose an option--</option>";
+	//let toReturn = '<div class="login"> <select name="course" id="course-select"> <option value=""> --Please choose an option--</option> '; 
 
-	formString += <?php
-			
-		$toReturn =
-			require_once '../back-end/utilities.php';
-		session_start();
+	//let phpVar = "";
+	var xmlhttp = new XMLHttpRequest();
+	xmlhttp.onreadystatechange = function() {
+		if (this.readyState==4 && this.status == 200) 
+		{ document.getElementById("form").innerHTML = this.responseText; }
+						}
 
-		$toReturn = "";
+	xmlhttp.open("GET", "TA_Rate_frontend.php", true);
+	xmlhttp.send();
 
-		$ta_array = Utilities::getTAByStudent($_SESSION["username"]);
+	//toReturn += phpVar;  //' <option value="">' + phpVar + '</option> '  ;//' <option value="' + phpVar  + '">'+ phpVar + '</option> ';
 
-		foreach ($ta_array as $ta)
-		{
-			$toReturn += "<option value='" + $ta + "'>" + $ta + "</option>";		
-		}	
 
-		echo $toReturn;
-	?>
-
-	formString += "</select> <br>
-			<button type='submit'>Select</button>
-		</div>";
-	document.getElementById("form").innerHTML = formString;
-
-}
-
-function startRate()
-{
-/*
-	var ta = document.getElementById('ta-select');
-	var innerForm = 
-'<form id="form" action="" method="POST" class="login"> 
-<input type="radio" name="rating" value="0">
-<input type="radio" name="rating" value="1">
-<input type="radio" name="rating" value="2">
-<input type="radio" name="rating" value="3">
-<input type="radio" name="rating" value="4">
-<input type="radio" name="rating" value="5">
-
-<input type="text" name="comment" size="50" maxlength="124">
-
-<br> <button type="submit"> Submit </button>
-</form>';
-	*/
-	document.getElementById('form') = "";
-	document.getElementById('form') = "<h1>hello</h1>";
-
+	//toReturn += '</select> <br> <button onclick="">Selectee</button> </div>';	
+	document.getElementById("form").innerHTML = toReturn;
 }
 
 </script>
+
 </body>
 </html>
